<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Suck it hello world!</string>
    <string name="reg">Register</string>
    <string name="enter_fname">Enter first name</string>
    <string name="enter_lname">Enter last name</string>
    <string name="enter_age">Enter your age</string>
    <string name="enter_email">name@email.com</string>
    <string name="enter_pw">Desired password</string>
    <string name="enter_pwc">Confirm password</string>
    <string name="enter_username">Desired username</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="log">Login</string>
    <string name="LoG">Lists of Gifts</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="enter_wish">Enter wish</string>
    <string name="add_label">Add</string>
    <string name="del_label">Delete</string>
    <string name="empty_text">List is empty</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="save">Save Info</string>
    <string name="user_info">User info</string>
    <string name="remember">Save user information</string>
    <string name="username">Enter username</string>
    <string name="password">Enter password</string>

</resources>
