<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/green1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.listsofgifts.UserActivity" 
    >

    <LinearLayout
        android:id="@+id/topLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1.1"
	    android:orientation="horizontal"
	    android:padding="2dp" 
	    >
    <EditText
        android:id="@+id/user_wishField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/black_gift"
        android:hint="@string/enter_wish"
        android:padding="2dp"
        android:textColorHint="#cccccc" 
        />
    <Button
        android:id="@+id/userAddBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.1"
        android:text="@string/add_label" 
        />
	</LinearLayout>
	<LinearLayout 
   		android:id="@+id/middleLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="0.45"
	    android:orientation="vertical"
	    android:padding="2dp" 
	    >
    <ListView
        android:id="@+id/wishList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:choiceMode="multipleChoice" 
        >
    </ListView>
	</LinearLayout>
    <LinearLayout
        android:id="@+id/botLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1.2"
	    android:orientation="horizontal"
	    >
    <Button
        android:id="@+id/userDelBtn"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/del_label" 
        />
</LinearLayout>
<LinearLayout
        android:id="@+id/iconLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1.2"
	    android:orientation="horizontal"
	    android:padding="2dp" 
	    >
    <ImageButton 
        android:id="@+id/iconBtn1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/black_home"
        android:background="@android:color/transparent"
        />
    <ImageButton 
        android:id="@+id/iconBtn2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/black_users"
        android:background="@android:color/transparent"
        />
    <ImageButton 
        android:id="@+id/iconBtn3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/black_end"
        android:background="@android:color/transparent"
        />
    </LinearLayout>
</LinearLayout>
